# cpp-playground

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  barecheck_token
.github/: bug_report.md
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml  cpp-playground.yml
adr/: adr_001_gorsellestirme_girdi_cikti_kutuphanesi.md  adr_002_git_branching_stratejisinin_belirlenmesi.md
app/: CMakeLists.txt
app/include/: components.h  event-system.h  graphical-object-factory.h  render-strategies.h  renderer.h  sdl-application.h  sdl-resource.h
app/src/: components.cpp  event-system.cpp  graphical-object-factory.cpp  main.cpp  render-strategies.cpp  renderer.cpp  sdl-application.cpp
cmake/: Sdl3Finder.cmake
lib/: CMakeLists.txt
scripts/: generate_coverage.sh  install_dependencies.bat  install_dependencies.sh
test/: CMakeLists.txt
test/src/: components-component-test.cpp  components-render-test.cpp  components-transform-test.cpp  components-velocity-test.cpp  event-system-test.cpp  sdl-application-test.cpp  sdl-renderer-test.cpp  sdl-resource-test.cpp  sdl_resource_test.cpp  test_function_lib.cpp
